<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="ip">X.X.X.X</string>
    <string name="app_name">tfm</string>
    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>
    <color name="black">#000000</color>
    <color name="radioo">#DF013A</color>
    <color name="pink">#FF0040</color>
    <color name="white">#FFFFFF</color>
    <string name="user">Inicio sesión</string>
    <string name="register">Registrar</string>
    <string name="back">Volver</string>
    <string name="usuario">Usuario</string>
    <string name="password">Password</string>
    <string name="login">Login</string>
    <string name="appLabel">TIT?</string>
    <string name="hintEditTextWords">TIT2</string>
    <string name="strBtnEnglish">TIT3</string>
    <string name="strBtnSpanish">TIT4</string>
    
    
       

</resources>
