<LinearLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:paddingLeft="@dimen/activity_horizontal_margin"
        android:paddingRight="@dimen/activity_horizontal_margin"
        android:paddingTop="@dimen/activity_vertical_margin"
        android:paddingBottom="@dimen/activity_vertical_margin"
        android:orientation="vertical"
        tools:context=".Main">

    <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/appLabel"
            android:gravity="center_horizontal"
            android:textSize="30sp"
            android:typeface="monospace"/>

    <ScrollView
            android:id="@+id/scrollView1"
            android:layout_width="match_parent"
            android:layout_height="0dip"
            android:layout_marginTop="@dimen/activity_vertical_margin"
            android:layout_weight="1">

        <EditText
                android:id="@+id/editTextWords"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="top|left"
                android:hint="@string/hintEditTextWords"
                android:inputType="textMultiLine"/>
    </ScrollView>

    <LinearLayout
            android:id="@+id/linearLayoutBtns"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/activity_vertical_margin"
            android:orientation="horizontal">


        <Button
                android:id="@+id/btnSpanish"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/strBtnSpanish"/>

    </LinearLayout>

</LinearLayout>