<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:background="@color/black"
    android:orientation="vertical"
    android:gravity="center" >

    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_margin="20dp"
        android:layout_weight="0.36"
        android:gravity="center_horizontal|center_vertical"
        android:orientation="vertical" >

         <ImageView
             android:id="@+id/imageView"
             android:layout_width="212dp"
             android:layout_height="212dp"
             android:layout_alignParentLeft="true"
             android:layout_alignParentTop="true"
             android:paddingBottom="55dp"
             android:src="@drawable/icon" />

        <LinearLayout
            android:orientation="horizontal"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content">

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/imageViewUser"
            android:src="@drawable/user"/>

        <EditText
               android:id="@+id/UserLoginText"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:ems="10"
        android:textColor="@color/white"
        android:textColorHint="@color/white"
        android:hint="@string/usuario"
        android:inputType="text" > </EditText>

        </LinearLayout>

        <LinearLayout
            android:orientation="horizontal"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content">
        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/imageViewPass"
            android:src="@drawable/pass"/>

        <EditText
            android:id="@+id/UserPasswordText"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textColor="@color/white"
        android:textColorHint="@color/white"
        android:ems="10"
        android:hint="@string/password"
        android:inputType="textPassword" />
        </LinearLayout>



    </LinearLayout>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="95dp"
        android:gravity="center_vertical"
            android:paddingTop="7dp"
            android:paddingBottom="7dp"
            android:paddingRight="7dp"
            android:paddingLeft="7dp" >

        <Button
            android:id="@+id/LoginButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentLeft="true"
            android:layout_alignParentRight="true"
            android:layout_gravity="bottom"
            android:text="@string/login"
            android:textColor="@color/white"
            android:background="@drawable/saphe"  />

    </RelativeLayout>

</LinearLayout>
    
    